[Company] 공통 모듈 변경으로 인한 코드 수정 (#83)
* Fix: 공통 모듈 호환성을 위해 수정

* Fix: userInfo targetId 삭제