@@ -13,7 +13,6 @@ import com.logistic.company.domain.model.vo.Gps;
 import com.logistic.company.domain.model.vo.Hub;
 import com.logistic.company.domain.model.vo.User;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 
 @Adapter
@@ -26,19 +25,19 @@ public class CompanyInternalAdapter implements CompanyInternalPort {
 
   @Override
   public Gps findGps(final String road) {
-    final GpsClientResponse response = gpsFeignClient.findGps(null, mapper.toGpsRequest(road));
+    final GpsClientResponse response = gpsFeignClient.findGps(road);
     return mapper.toGps(response);
   }
 
   @Override
   public Hub findHub(final Long hubId) {
-    final HubClientResponse response = hubFeignClient.findHub(hubId, null);
+    final HubClientResponse response = hubFeignClient.findHub(hubId);
     return mapper.toHub(response);
   }
 
   @Override
-  public List<User> findUserList(List<String> userIds) {
-    final List<UserClientResponse> response = userFeignClient.findUserList(mapper.toUserRequest(userIds, null));
-    return response.stream().map(mapper::toUser).collect(Collectors.toList());
+  public List<User> findUserList(final List<String> userIds) {
+    final List<UserClientResponse> response = userFeignClient.findUserList(userIds);
+    return response.stream().map(mapper::toUser).toList();
   }
 }
